updated html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
+        <div class="container">
+            <aside class="left-section">
+                <div class="logo">
+                   <button class="menu-btn" id="menu-close">
+                    <i class='bx bx-log-out-circle'></i>
+                   </button>
+                   <img src="assests/logo 3.png">
+                   <a href="#"> JonnieTech</a>
+                </div>
+                <div class="sidebar">
+                    <div class="item">
+                        <i class='bx bx-home-alt-2' ></i>
+                        <a href="#">Overview</a>
+                    </div>
+                    <div class="item">
+                        <i class='bx bx-grid-alt' ></i>
+                        <a href="#">Course</a>
+                    </div>
+                    <div class="item">
+                        <box-icon name='folder'></box-icon>
+                        <a href="#">Resources</a>
+                    </div>
+                    <div class="item">
+                        <i class='bx bx-message-square-dots' ></i>
+                        <a href="#">Message</a>
+                    </div>
+                    <div class="item">
+                        <i class='bx bx-cog' ></i>
+                        <a href="#">Settings</a>
+                    </div>
+                </div>
+            </aside>
+        </div>
 
         <script src="script.js"></script>
     </body>
