updated html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
+        <!--- side bar code-->
         <div class="container">
             <aside class="left-section">
                 <div class="logo">
@@ -37,6 +38,16 @@
                     <div class="item">
                         <i class='bx bx-cog' ></i>
                         <a href="#">Settings</a>
+                    </div>
+                    <div class="pic">
+                        <img src="assests/pro.png">
+                    </div>
+                    <div class="upgrade">
+                        <h5>Upgrade Your Plan</h5>
+                        <div class="link">
+                            <a href="#">Go to <b>PRO</b></a>
+                            <i class='bx bxs-chevron-right' ></i>
+                        </div>
                     </div>
                 </div>
             </aside>
