added some features

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                    <a href="#"> JonnieTech</a>
                 </div>
                 <div class="sidebar">
-                    <div class="item">
+                    <div class="item" id="active">
                         <i class='bx bx-home-alt-2' ></i>
                         <a href="#">Overview</a>
                     </div>
@@ -28,7 +28,7 @@
                         <a href="#">Course</a>
                     </div>
                     <div class="item">
-                        <box-icon name='folder'></box-icon>
+                        <i class='bx bx-folder' ></i>
                         <a href="#">Resources</a>
                     </div>
                     <div class="item">
