--- a/index.html
+++ b/index.html
@@ -1,58 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive   Dashboard</title>
-        <link rel="stylesheet" href="styles.css">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    </head>
-    <body>
-        <!--- side bar code-->
-        <div class="container">
-            <aside class="left-section">
-                <div class="logo">
-                   <button class="menu-btn" id="menu-close">
-                    <i class='bx bx-log-out-circle'></i>
-                   </button>
-                   <img src="assests/logo 3.png">
-                   <a href="#"> JonnieTech</a>
-                </div>
-                <div class="sidebar">
-                    <div class="item" id="active">
-                        <i class='bx bx-home-alt-2' ></i>
-                        <a href="#">Overview</a>
-                    </div>
-                    <div class="item">
-                        <i class='bx bx-grid-alt' ></i>
-                        <a href="#">Course</a>
-                    </div>
-                    <div class="item">
-                        <i class='bx bx-folder' ></i>
-                        <a href="#">Resources</a>
-                    </div>
-                    <div class="item">
-                        <i class='bx bx-message-square-dots' ></i>
-                        <a href="#">Message</a>
-                    </div>
-                    <div class="item">
-                        <i class='bx bx-cog' ></i>
-                        <a href="#">Settings</a>
-                    </div>
-                </div>
-                <div class="pic">
-                    <img src="assests/pro.png">
-                </div>
-                <div class="upgrade">
-                    <h5>Upgrade Your Plan</h5>
-                    <div class="link">
-                        <a href="#">Go to <b>PRO</b></a>
-                        <i class='bx bxs-chevron-right' ></i>
-                    </div>
-                </div>
-            </aside>
-        </div>
 
-        <script src="script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
+<body>
+    <!--- side bar code-->
+    <div class="container">
+        <aside class="left-section">
+            <div class="logo">
+                <button class="menu-btn" id="menu-close">
+                    <i class='bx bx-log-out-circle'></i>
+                </button>
+                <img src="assests/logo 3.png">
+                <a href="#"> JonnieTech</a>
+            </div>
+            <div class="sidebar">
+                <div class="item" id="active">
+                    <i class='bx bx-home-alt-2'></i>
+                    <a href="#">Overview</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-grid-alt'></i>
+                    <a href="#">Course</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-folder'></i>
+                    <a href="#">Resources</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-message-square-dots'></i>
+                    <a href="#">Message</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-cog'></i>
+                    <a href="#">Settings</a>
+                </div>
+            </div>
+            <div class="pic">
+                <img src="assests/pro.png">
+            </div>
+            <div class="upgrade">
+                <h5>Upgrade Your Plan</h5>
+                <div class="link">
+                    <a href="#">Go to <b>PRO</b></a>
+                    <i class='bx bxs-chevron-right'></i>
+                </div>
+            </div>
+        </aside>
+
+        <main>
+            <header>
+                <button class="menu-btn" id="menu-open">
+                    <i class='bx bx-menu'></i>
+                </button>
+                <h5>Hello <b>Jonnie</b>, welcome back!</h5>
+            </header>
+            <div class="separator">
+                <div class="info">
+                    <h3>My Courses</h3>
+                    <a href="#">View All</a>
+                </div>
+                <div class="search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="Search">
+                </div>
+            </div>
+            <div class="analytics">
+                <div class="item">
+                    <div class="progress">
+                        <div class="info">
+                            <h5>Locations</h5>
+                            <p>35 Lessons</p>
+                        </div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                        </div>
+                    </div>
+                    <i class='bx bx-map-pin'></i>
+                </div>
+                <div class="item">
+                    <div class="progress">
+                        <div class="info">
+                            <h5>People</h5>
+                            <p>30 Lessons</p>
+                        </div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                        </div>
+                    </div>
+                    <i class='bx bxs-user-voice' ></i>
+                </div>
+                <div class="item">
+                    <div class="progress">
+                        <div class="info">
+                            <h5>Airport</h5>
+                            <p>45 Lessons</p>
+                        </div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                        </div>
+                    </div>
+                    <i class='bx bxs-plane-land' ></i>
+                </div>
+                <div class="item">
+                    <div class="progress">
+                        <div class="info">
+                            <h5>Places</h5>
+                            <p>20 Lessons</p>
+                        </div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                        </div>
+                    </div>
+                    <i class='bx bxs-castle' ></i>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
