added some features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div class="sidebar">
                 <div class="item" id="active">
                     <i class='bx bx-home-alt-2'></i>
-                    <a href="#">Overview</a>
+                    <a href="#
+                    ">Overview</a>
                 </div>
                 <div class="item">
                     <i class='bx bx-grid-alt'></i>
@@ -121,6 +122,22 @@
                     <i class='bx bxs-castle' ></i>
                 </div>
             </div>
+            <div class="separator">
+                <div class="info">
+                    <h3>Planning</h3>
+                    <a href="#">View All</a>
+                </div>
+                <input type="date" value="2023-10-15">
+            </div>
+            <div class="planning">
+                <div class="item">
+                    <div class="left">
+                        <div class="icon">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
@@ -128,3 +145,4 @@
 </body>
 
 </html>
+
