added some features

--- a/index.html
+++ b/index.html
@@ -133,9 +133,50 @@
                 <div class="item">
                     <div class="left">
                         <div class="icon">
-                            
+                            <i class='bx bx-book-alt'></i>
+                        </div>
+                        <div class="details">
+                            <h5>Reading - Topic 1</h5>
+                            <p>8:00 - 10:00</p>
                         </div>
                     </div>
+                    <i class='bx bx-dots-vertical-rounded' ></i>
+                </div>
+                <div class="item">
+                    <div class="left">
+                        <div class="icon">
+                            <i class='bx bxs-edit-alt'></i>
+                        </div>
+                        <div class="details">
+                            <h5>Writing - Topic 2</h5>
+                            <p>13:00 - 14:00</p>
+                        </div>
+                    </div>
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                </div>
+                <div class="item">
+                    <div class="left">
+                        <div class="icon">
+                            <i class='bx bx-headphone' ></i>
+                        </div>
+                        <div class="details">
+                            <h5>Listening- Topic 3</h5>
+                            <p>16:00 - 17:00</p>
+                        </div>
+                    </div>
+                    <i class='bx bx-dots-vertical-rounded' ></i>
+                </div>
+                <div class="item">
+                    <div class="left">
+                        <div class="icon">
+                            <i class='bx bx-volume-low' ></i>
+                        </div>
+                        <div class="details">
+                            <h5>Reading - Topic 4</h5>
+                            <p>19:00 - 20:00</p>
+                        </div>
+                    </div>
+                    <i class='bx bx-dots-vertical-rounded' ></i>
                 </div>
             </div>
         </main>
