added some styles

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </aside>
-
+        <!--Main part of the dashboard-->
         <main>
             <header>
                 <button class="menu-btn" id="menu-open">
@@ -180,6 +180,8 @@
                 </div>
             </div>
         </main>
+        <!--right side part of the dashboard-->
+        
     </div>
 
     <script src="script.js"></script>
