added some features

--- a/index.html
+++ b/index.html
@@ -181,7 +181,83 @@
             </div>
         </main>
         <!--right side part of the dashboard-->
-        
+        <aside class="right-section">
+            <div class="top">
+                <i class='bx bx-bell'></i>
+                <div class="profile">
+                    <div class="left">
+                        <img src="./assests/ronaldo.jpeg">
+                        <div class="user">
+                            <h5>Jonnie Tech</h5>
+                            <a href="#">Basic Plan</a>
+                        </div>
+                    </div>
+                    <i class='bx bx-chevron-right' ></i>
+                </div>
+            </div>
+            <div class="separator" id="first">
+                <h4>Statistics</h4>
+            </div>
+            <div class="stats">
+                <div class="item">
+                    <div class="top">
+                        <p>Courses</p>
+                        <p>Completed</p>
+                    </div>
+                    <div class="bottom">
+                        <div class="line">
+                            <h3>02</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top">
+                        <p>Total Points</p>
+                        <p>Gained</p>
+                    </div>
+                    <div class="bottom">
+                        <div class="line">
+                            <h3>250</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top">
+                        <p>Courses</p>
+                        <p>In Progress</p>
+                    </div>
+                    <div class="bottom">
+                        <div class="line">
+                            <h3>05</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top">
+                        <p>Tasks</p>
+                        <p>Finished</p>
+                    </div>
+                    <div class="bottom">
+                        <div class="line">
+                            <h3>250</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="separator">
+                <h4>Weekly Work</h4>
+            </div>
+            <div class="weekly">
+                <div class="title">
+                    <div class="line">
+                        <h5>Tasks This Week</h5>
+                    </div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                </div>
+            </div>
+
+        </aside>
     </div>
 
     <script src="script.js"></script>
