added some features

--- a/index.html
+++ b/index.html
@@ -205,9 +205,8 @@
                         <p>Completed</p>
                     </div>
                     <div class="bottom">
-                        <div class="line">
-                            <h3>02</h3>
-                        </div>
+                        <div class="line"></div>
+                            <h3>02</h3>    
                     </div>
                 </div>
                 <div class="item">
@@ -216,9 +215,8 @@
                         <p>Gained</p>
                     </div>
                     <div class="bottom">
-                        <div class="line">
+                        <div class="line"></div>
                             <h3>250</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -227,9 +225,8 @@
                         <p>In Progress</p>
                     </div>
                     <div class="bottom">
-                        <div class="line">
+                        <div class="line"></div>
                             <h3>05</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -238,9 +235,8 @@
                         <p>Finished</p>
                     </div>
                     <div class="bottom">
-                        <div class="line">
+                        <div class="line"></div>
                             <h3>250</h3>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -249,9 +245,9 @@
             </div>
             <div class="weekly">
                 <div class="title">
-                    <div class="line">
+                    <div class="line"></div>
                         <h5>Tasks This Week</h5>
-                    </div>
+                   
                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                             aria-valuemax="100">
                 </div>
